--- a/.travis.yml
+++ b/.travis.yml
@@ -8,4 +8,4 @@ services:
 befor_script: pip install docker-compose
 
 script:
-  - docker-compose run app sh -c "python manage.py test && flake8s"
+  - docker-compose run app sh -c "python manage.py test && flake8"
